--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="right_half">
           <h1>Teach Your Students Online Safety in the Classroom</h1>
           <h4>Social Media TestDrive allows kids to practice social media skills in a safe, realistic environment.</h4>
-          <a href="html/lessons.html"><button id="homePage_button" type="button">View Our Lessons </button></a>
+          <a href="lessons.html"><button id="homePage_button" type="button">View Our Lessons </button></a>
         </div>
       </div>
 
@@ -32,7 +32,7 @@
           </div>
         </div>
         </a>
-        <a href="html/lessons/cyberbullying.html"><div class="long_lesson">
+        <a href="lessons/cyberbullying.html"><div class="long_lesson">
           <div class="LL_img" id="home_CyberBullying"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Stopping Cyberbullying</p>
@@ -40,7 +40,7 @@
           </div>
         </div>
       </a>
-      <a class="lesson_button" href="html/lessons.html">View all our lessons >></a>
+      <a class="lesson_button" href="lessons.html">View all our lessons >></a>
       </div>
 
     <div id="bottomNav"></div>
