--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="topnav">
   <div id="logoCont">
-    <a id="logo" href="#testdrive">Social Media TestDrive</a>
+    <a id="logo" href="index.html">Social Media TestDrive</a>
   </div>
 
   <div id="linksCont">
