--- a/team.html
+++ b/team.html
@@ -21,8 +21,10 @@
         <p>Dr. Whitlock is a Research Scientist at Cornell's Bronfenbrenner Center for Translational Research, and the Director of The Cornell Research Program on Self-Injury and Recovery. She is interested in the social, cultural, and contextual factors that influence adolescent development and identity formation. </p>
         <p><b>Technical Director: Dr. Dominic DiFranzo</b></p>
         <p>Dr. DiFranzo is a postdoctoral associate in the Social Media Lab. He specializes in creating research-based technological interventions to social issues. He oversees the technical development and direction for the TestDrive platform.</p>
-        <p><b>Project Manager: Jessie Taft</b></p>
-        <p>Jessie is the Lab Manager for the Social Media Lab, and coordinates curriculum/content development and outreach for Social Media TestDrive.</p>
+        <p><b>Research Director: Dr. Yoon Hyung Choi</b></p>
+        <p>Dr. Choi is a postdoctoral associate in the Social Media Lab. She coordinates research, curriculum/content development, and outreach for Social Media TestDrive.</p>
+        <p><b>Evaluation Director: Amanda Purington</b></p>
+        <p>Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University. She is responsible for the assessment and evaluation of Social Media TestDrive.</p>
         <p><b>Curriculum and Content Development</b></p>
         <p>These Social Media Lab research assistants helped with curriculum development and content creation for TestDrive: Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, and Yutong Zhou.</p>
         <p><b>Website Development</b></p>
