--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
 
       <div class="lessonheader"><h1 class="lessontitle">Meet the Team</h1></div>
       <div class="lessoncontent">
-        <p>TestDrive is developed by the Cornell Social Media Lab, with generous support from the Program for Research on Youth Development and Engagement (PRYDE), Cornell's Bronfenbrenner Center for Translational Research (BCTR), and the National Science Foundation.</p>
+        <p>TestDrive is developed by the Cornell Social Media Lab, with generous support from the Morgan Family Foundation, Program for Research on Youth Development and Engagement (PRYDE), Cornell's Bronfenbrenner Center for Translational Research (BCTR), and the National Science Foundation.</p>
 
         <p class="lessonsubheader">People</p>
         <p><b>Program Director: Dr. Natalie Bazarova </b></p>
@@ -25,12 +25,14 @@
         <p>Dr. Choi is a postdoctoral associate in the Social Media Lab. She coordinates research, curriculum/content development, and outreach for Social Media TestDrive.</p>
         <p><b>Evaluation Director: Amanda Purington</b></p>
         <p>Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University. She is responsible for the assessment and evaluation of Social Media TestDrive.</p>
+        <p><b>Applications Programmer: Nisarg Patel</b></p>
+        <p>Nisarg heads the software development and technological operations of the Social Media TestDrive platform.</p>
         <p><b>Curriculum and Content Development</b></p>
-        <p>These Social Media Lab research assistants helped with curriculum development and content creation for TestDrive: Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, and Yutong Zhou.</p>
+        <p>These Social Media Lab research assistants helped with curriculum development and content creation for TestDrive: Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
         <p><b>Website Development</b></p>
         <p>These student web developers created the socialmediatestdrive.org website: Nika Ablao, Carina Crabbe, Sierra Stone, and Cindy Xu.</p>
         <p class="lessonsubheader">Sponsors</p>
-        <p>Social Media TestDrive is supported by the generosity of the Bronfenbrenner Center for Translational Research and by National Science Foundation award #1405634. </p>
+        <p>Social Media TestDrive is supported by the generosity of the Morgan Family Foundation, Bronfenbrenner Center for Translational Research, and National Science Foundation award #1405634. </p>
       </div>
 
       <div id="bottomNav"></div>
