--- a/team.html
+++ b/team.html
@@ -26,7 +26,7 @@
         <p><b>Evaluation Director: Amanda Purington</b></p>
         <p>Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University. She is responsible for the assessment and evaluation of Social Media TestDrive.</p>
         <p><b>Applications Programmer: Nisarg Patel</b></p>
-        <p>Nisarg heads the software development and technological operations of the Social Media TestDrive platform.</p>
+        <p>Nisarg is in charge of the software development and technological operations of the Social Media TestDrive platform.</p>
         <p><b>Curriculum and Content Development</b></p>
         <p>These Social Media Lab research assistants helped with curriculum development and content creation for TestDrive: Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
         <p><b>Website Development</b></p>
