--- a/about_us.html
+++ b/about_us.html
@@ -20,15 +20,9 @@
         <p>Each TestDrive module is designed to teach a specific social media skill: privacy settings, smart self-presentation, stopping cyberbullying, and information literacy, to name a few. Each module starts with a classroom lesson delivered by an educator or facilitator, with lesson content adapted from Common Sense Media, Harvard University's Youth and Media Program, and Fordham University's Privacy Educators Program. After each brief lesson, students participate in an interactive activity on the TestDrive platform that allows them to put the lesson into action. A group discussion and reflection activity wraps up each module.</p>
 
         <p class="lessonsubheader">Who created TestDrive?</p>
-        <p>TestDrive is a platform created by researchers in the Cornell University Social Media Lab, in collaboration with the Program for Research in Youth Development and Engagement and New York State 4-H educators.</p>
+        <p>TestDrive is a platform created by researchers in the Cornell University Social Media Lab, in collaboration with Common Sense Education, the Program for Research in Youth Development and Engagement, and New York State 4-H educators.</p>
         <p class="lessonsubheader">How can I get started with TestDrive?</p>
-        <p>TestDrive is still in beta. To receive access, you will need to contact the program administrator directly using the contact form on the Get Started page.</p>
-        <p class="lessonsubheader">How can I manage my student groups?</p>
-        <p>TestDrive Educator Accounts allow educators to create and manage student groups. Students can still
-create their own accounts, but they’ll receive a login code that you create, which will automatically
-assign them to your class. You’ll be able to see their usernames, quiz scores, and module progress.</p>
-        <p> </p>
-        <a href="Educator Account Instructions.pdf"> Educator Account Instructions</a>
+        <p>You can access TestDrive modules at the following link: <a href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. Please <a href="mailto:socialmediatestdrive@gmail.com">e-mail us</a> if you have any questions!</p>
       </div>
 
       <div id="bottomNav"></div>
