--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-
-        </script>
     <body>
       <div id="topNav"></div>
-
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true" width=100% height=800px></iframe>
+      <div class="lessonheader"><h1 class="lessontitle">Get Started!</h1></div>
+      <div class="lessoncontent">
+        <p>You can access TestDrive modules at the following link: <a href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. Please <a href="mailto:socialmediatestdrive@gmail.com">e-mail us</a> if you have any questions!</p>
+      </div>
 
       <div id="bottomNav"></div>
       <script src="nav.js"></script>
