--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -10,7 +10,12 @@
       <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">Get Started!</h1></div>
       <div class="lessoncontent">
-        <p>You can access TestDrive modules at the following link: <a href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. Please <a href="mailto:socialmediatestdrive@gmail.com">e-mail us</a> if you have any questions!</p>
+        <p>You can access all TestDrive modules at the following link: <a href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>.</p>
+        <p class="lessonsubheader">What is in a TestDrive module?</p>
+        <p>A TestDrive module consists of four parts. First, students will learn key terms, ideas, and behaviors related to the topic of the module. Afterwards, students get a chance to practice the behaviors in a guided setting. Then, students get to explore a simulated social media site where they are able to interact with the timeline, create their own posts, and get further practice in social media skills. The final activity in the module will be a reflection page with questions about what students did on the simulated social media site, as well as questions for discussion.</p>
+        <p></p>
+        <p class="lessonsubheader">Questions?</p>
+        <p>Please <a href="mailto:socialmediatestdrive@gmail.com">e-mail us</a> if you have any questions or run into problems!</p>
       </div>
 
       <div id="bottomNav"></div>
@@ -18,3 +23,5 @@
 
     </body>
 </html>
+
+    
