--- a/for_parents.html
+++ b/for_parents.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 
 <html>
+
     <head>
-        <title>TestDrive</title>
-        <link rel="stylesheet" type="text/css" href="../style.css">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-        <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-        </script>
+      <title>TestDrive</title>
+      <link rel="stylesheet" type="text/css" href="../style.css">
+      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
+      <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
+      <style>
+        .links:hover {
+            background-color: #6eb43f;
+        }
+      </style>
+    </head>
     <body>
       <div id="topNav"></div>
 
