some more styling

--- a/lessons.html
+++ b/lessons.html
@@ -11,7 +11,7 @@
       <div id="topNav"></div>
 
       <div class="lessons_container">
-        <h3>Lessons</h3>
+        <h3>Lessons</h3><hr/>
         <a href="lessons/gettingstarted.html"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_GetStart"></div>
           <div class="Bottom_TextHalf">
