added 'for educators' page, fixed lesson pages nav bars, made banners less thick, changed Get Started page to FAQ

--- a/faq.html
+++ b/faq.html
@@ -6,9 +6,10 @@
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
+    </head>
     <body>
       <div id="topNav"></div>
-      <div class="lessonheader"><h1 class="lessontitle">Get Started!</h1></div>
+      <div class="lessonheader"><h1 class="lessontitle">FAQ</h1></div>
       <div class="lessoncontent">
         <p>You can access all TestDrive modules at the following link: <a href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>.</p>
         <p class="lessonsubheader">What is in a TestDrive module?</p>
@@ -23,5 +24,3 @@
 
     </body>
 </html>
-
-    
