--- a/for_parents.html
+++ b/for_parents.html
@@ -11,6 +11,10 @@
         .links:hover {
             background-color: #6eb43f;
         }
+
+        h1 {
+          margin-left:0%;
+        }
       </style>
     </head>
     <body>
@@ -18,7 +22,7 @@
 
       <div id="forParents_s1" class="section1">
         <div class="left_half">
-          <img class="headerPic" src="../img/filler2.png">
+          <img class="headerPic" src="../img/filler2.png" alt="headerPic">
         </div>
         <div class="right_half">
           <h1>The Parents & Guardians Guide to Social Media TestDrive</h1>
