--- a/lessons/informationliteracy.html
+++ b/lessons/informationliteracy.html
@@ -5,25 +5,21 @@
         <title>TestDrive</title>
         <link rel="stylesheet" type="text/css" href="../../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-        <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />          
+        <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>
-        </script>
+    </head>
     <body>
-    	<div class="topnav">
+      <div class="topnav">
         <div id="logoCont">
-          <a id="logo" href="../../index.html">Social Media TestDrive</a>
+        <a id="logo" href="../index.html"><img src="../img/logo.png" alt="logo">   Social Media TestDrive</a>
         </div>
-
         <div id="linksCont">
+          <a class="links" href="../about_us.html"><p>About</p></a>
           <a class="links" href="../lessons.html"><p>Lessons</p></a>
+          <a class="links" href="../for_educators.html"><p>For Educators</p></a>
           <a class="links" href="../for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="../about_us.html"><p>About Us</p></a>
-          <a class="links" href="../gettingstarted.html"><p>Get Started</p><a>
-        </div>
-
-        <!--<div id="loginCont">
-          <a href="gettingstarted.html"><div id="smallButton">Get Started</div></a>-->
+          <a class="links" href="../team.html"><p>The Team</p></a>
+          <a class="links" href="../faq.html"><p>FAQ</p><a>
         </div>
       </div>
 
@@ -108,12 +104,15 @@
         <p>Feedback   is   welcome!</i></p>
       </div>
       <div class="footer">
-        <div class="footCont_title"><a class="fTL" href="../../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
         <div class="footCont_links">
-          <a class="footerlinks" href="../lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="../terms.html"><p>Terms & Copyright</p><a>
+          <a class="footerlinks" href="../faq.html"><p>FAQ</p><a>
+          <a class="footerlinks" href="../team.html"><p>The Team</p></a>
           <a class="footerlinks" href="../for_parents.html"><p>For Parents</p></a>
-          <a class="footerlinks" href="../about_us.html"><p>About Us</p></a>
-          <a class="footerlinks" href="../gettingstarted.html"><p>Get Started</p><a>
+          <a class="footerlinks" href="../for_educators.html"><p>For Educators</p></a>
+          <a class="footerlinks" href="../lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="../about_us.html"><p>About</p></a>
         </div>
       </div>
     </body>
