--- a/team.html
+++ b/team.html
@@ -2,11 +2,11 @@
 
 <html>
     <head>
-        <title>TestDrive</title>
-        <link rel="stylesheet" type="text/css" href="../style.css">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-        <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-        </script>
+      <title>TestDrive</title>
+      <link rel="stylesheet" type="text/css" href="../style.css">
+      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
+      <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
+    </head>
     <body>
       <div id="topNav"></div>
 
