--- a/about_us.html
+++ b/about_us.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
+    </head>
     <body>
       <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
