--- a/header.html
+++ b/header.html
@@ -5,10 +5,11 @@
   </div>
 
   <div id="linksCont">
-    <a class="links" href="html/lessons.html"><p>Lessons</p></a>
-    <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
     <a class="links" href="html/about_us.html"><p>About</p></a>
+    <a class="links" href="html/lessons.html"><p>Lessons</p></a>
+    <a class="links" href="html/for_educators.html"><p>For Educators</p></a>
+    <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
     <a class="links" href="html/team.html"><p>The Team</p></a>
-    <a class="links" href="html/gettingstarted.html"><p>Get Started</p><a>
+    <a class="links" href="html/faq.html"><p>FAQ</p><a>
   </div>
 </div>
