--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon" />
-        </script>
+        <style>
+          h1 {
+            margin-left:0%;
+          }
+        </style>
     </head>
     <body>
       <div id="topNav"></div>
@@ -14,12 +18,12 @@
      <div id="container">
       <div id="homePage_s1" class="section1">
         <div class="left_half">
-          <img class="headerPic" src="img/filler1.png">
+          <img class="headerPic1" src="img/filler1.png" alt="headerPic">
         </div>
         <div class="right_half">
           <h1>Teach Your Students Online Safety in the Classroom</h1>
           <h4>Social Media TestDrive allows kids to practice social media skills in a safe, realistic environment.</h4>
-          <a href="lessons.html"><button id="homePage_button" type="button">View Our Lessons </button></a>
+          <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Our Lessons </button>
         </div>
       </div>
 
@@ -42,6 +46,7 @@
       </a>
       <a class="lesson_button" href="lessons.html">View all our lessons >></a>
       </div>
+    </div>
 
     <div id="bottomNav"></div>
     <script src="nav.js"></script>
