--- a/lessons.html
+++ b/lessons.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-        </script>
+    </head>
     <body>
       <div id="topNav"></div>
 
