--- a/about_us.html
+++ b/about_us.html
@@ -11,9 +11,8 @@
       <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
       <div class="lessoncontent">
-        <p class="lessonsubheader">Who is TestDrive for?</p>
-        <p>Social media sites are where life happens for many of today's young people, so it's important to teach them to use these sites safely and effectively. However, there aren't currently ways for kids who are too young to have social media accounts of their own to practice these skills in a safe environment.</p>
-        <p>Like a driving simulator for young people learning to drive for the first time, TestDrive is a safe social media simulation that lets young people practice the skills they learn in the classroom. It looks and feels like a real social media site, but instead of being populated by strangers from all over the world, all of the other users are "bots" pre-programmed by the site's creators. Young people can practice interacting with other "users" and their posts without worrying about "stranger danger". They can also practice setting their privacy settings, making their own posts, and other important social media skills without worrying about the consequences of getting things wrong.</p>
+        <p class="lessonsubheader">Mission Statement</p>
+        <p>Social Media TestDrive empowers youth to become prosocial, productive members of the digitalworld through media literacy education and experiential learning in a protected yet realistic simulated social media environment.</p>
         <p class="lessonsubheader">How does a TestDrive lesson work?</p>
         <p>Each TestDrive module is designed to teach a specific social media skill: privacy settings, smart self-presentation, stopping cyberbullying, and information literacy, to name a few. Each module starts with a classroom lesson delivered by an educator or facilitator, with lesson content adapted from Common Sense Media, Harvard University's Youth and Media Program, and Fordham University's Privacy Educators Program. After each brief lesson, students participate in an interactive activity on the TestDrive platform that allows them to put the lesson into action. A group discussion and reflection activity wraps up each module.</p>
 
