--- a/index.html
+++ b/index.html
@@ -21,29 +21,36 @@
           <img class="headerPic1" src="img/filler1.png" alt="headerPic">
         </div>
         <div class="right_half">
-          <h1>Teach Your Students Online Safety in the Classroom</h1>
-          <h4>Social Media TestDrive allows kids to practice social media skills in a safe, realistic environment.</h4>
+          <h1>Learn digital citizenship skills through a social media simulation</h1>
+          <h4>Social Media TestDrive lets students practice digital citizenship skills within a safe and protected platform.</h4>
           <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Our Lessons </button>
         </div>
       </div>
 
       <div class="section2">
-        <a href="lessons/smartselfpres.html"><div class="long_lesson">
-          <div id="home_SelfPres" class="LL_img"></div>
-          <div class="LL_text">
-            <p class="lessonBox_title">Smart Self Presentation</p>
-            <p>This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others.</p>
-          </div>
+        <div class="long_lesson">
+          <a href="lessons.html">
+            <div id="home_CyberBullying" class="LL_img"></div>
+            <div class="LL_text">
+              <p class="lessonBox_title">Upstanding to Cyberbullying</p>
+              <p>This module will teach students how to detect signs of cyberbullying and
+                how to respond to cyberbullying situations. Students will be able to practice
+                "upstanding" behaviors to cyberbullying such as supporting the target, confronting
+                the bully, and reporting the cyberbullying posts to the social media site.</p>
+            </div>
+          </a>
         </div>
-        </a>
-        <a href="lessons/cyberbullying.html"><div class="long_lesson">
-          <div class="LL_img" id="home_CyberBullying"></div>
-          <div class="LL_text">
-            <p class="lessonBox_title">Stopping Cyberbullying</p>
-            <p>This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes "upstanding" behavior in cyberbullying situations.</p>
-          </div>
+        <div class="long_lesson">
+          <a href="lessons.html">
+            <div id="home_SelfPres" class="LL_img" ></div>
+            <div class="LL_text">
+              <p class="lessonBox_title">Is it Private Information?</p>
+              <p>In this module, students will learn about what kinds of information are safe
+                to share with different social media audiences and identify examples of private
+                information that is inappropriate to share on social media.</p>
+            </div>
+          </a>
         </div>
-      </a>
       <a class="lesson_button" href="lessons.html">View all our lessons >></a>
       </div>
     </div>
