--- a/lessons.html
+++ b/lessons.html
@@ -12,11 +12,16 @@
 
       <div class="lessons_container">
         <h3>Lessons</h3><hr/>
-        <a href="lessons/gettingstarted.html"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_GetStart"></div>
+        <a href="https://app.socialmediatestdrive.org/intro/cyberbullying"><div class="lessonsBox">
+          <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Getting Started on TestDrive: Usernames, Passwords, and Bios, Oh My!</p>
-            <p>This lesson will help teach students how to choose smart usernames and passwords when they create accounts on social media sites (and other kinds of websites too). It also serves to get students oriented on Social Media TestDrive.</p>
+            <p class="lessonBox_title">Upstanding to Cyberbullying</p>
+            <p class="black">This module will teach students how to detect signs of cyberbullying and
+              how to respond to cyberbullying situations. Students will be able to practice
+              "upstanding" behaviors to cyberbullying such as supporting the target, confronting
+              the bully, and reporting the cyberbullying posts to the social media site.</p>
+            <p>Aligned Common Sense Lesson: <a id="linkunderline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
+            </p>
           </div>
         </div></a>
         <a href="lessons/smartselfpres.html"><div class="lessonsBox">
@@ -27,7 +32,7 @@
           </div>
         </div></a>
         <a href="lessons/cyberbullying.html"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
+          <div class="Top_PicHalf" id="lesson_"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Stopping Cyberbullying</p>
             <p> This lesson will help students learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes "upstanding" behavior in cyberbullying situations.</p>
