All necessary changes made

--- a/about_us.html
+++ b/about_us.html
@@ -12,14 +12,25 @@
       <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
       <div class="lessoncontent">
         <p class="lessonsubheader">Mission Statement</p>
-        <p>Social Media TestDrive empowers youth to become prosocial, productive members of the digitalworld through media literacy education and experiential learning in a protected yet realistic simulated social media environment.</p>
-        <p class="lessonsubheader">How does a TestDrive lesson work?</p>
-        <p>Each TestDrive module is designed to teach a specific social media skill: privacy settings, smart self-presentation, stopping cyberbullying, and information literacy, to name a few. Each module starts with a classroom lesson delivered by an educator or facilitator, with lesson content adapted from Common Sense Media, Harvard University's Youth and Media Program, and Fordham University's Privacy Educators Program. After each brief lesson, students participate in an interactive activity on the TestDrive platform that allows them to put the lesson into action. A group discussion and reflection activity wraps up each module.</p>
-
-        <p class="lessonsubheader">Who created TestDrive?</p>
-        <p>TestDrive is a platform created by researchers in the Cornell University Social Media Lab, in collaboration with Common Sense Education, the Program for Research in Youth Development and Engagement, and New York State 4-H educators.</p>
-        <p class="lessonsubheader">How can I get started with TestDrive?</p>
-        <p>You can access TestDrive modules at the following link: <a href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. Please <a href="mailto:socialmediatestdrive@gmail.com">e-mail us</a> if you have any questions!</p>
+        <p>Social Media TestDrive empowers youth to become prosocial, productive members of the digitalworld through
+          media literacy education and experiential learning in a protected yet realistic simulated social media environment.</p>
+        <p class="lessonsubheader">About Social Media TestDrive</p>
+        <p>Social Media TestDrive is a platform created by researchers in the Cornell University Social Media Lab, in collaboration
+          with Common Sense Education, the Program for Research in Youth Development and Engagement, and New
+          York State 4-H educators. The project is generously supported by the Morgan Family Foundation. Like a driving simulator for
+          young people learning to drive for the first time, TestDrive is a social media simulation designed to let students learn
+          about and practice social media skills. TestDrive looks and feels like a real social media site, butall the other users on
+          the site are “bots” that post content created by the research team. As a result, students can practice important social media
+          skills in a safe and realistic environment without worrying about the consequences of making mistakes.</p>
+        <p>Each TestDrive module is designed to teach a specific social media skill, such as managing privacy settings, smart self-presentation,
+          upstanding to cyberbullying, and information literacy. A TestDrive module consists of four parts. First, students will learn key terms,
+          ideas, and behaviors related to the topic of the module. Afterwards, students get a chance to practice the behaviors in a guided setting.
+          Then, students get to explore a simulated social media site wherethey are able to interact with the timeline, create their own posts,
+          and get further practice in social media skills. The final activity in the module is a reflection page with questions about whatstudents
+          did on the simulated social media site, as well as additional questions for reflection.</p>
+        <p>You can access TestDrive modules at the following link: <a class="fontbig" href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>.
+          For instructions on how to use TestDrive, please check out the “For Educators” and “For Parents” sections of our website.
+          Please <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">contact us</a> if you have any questions!</p>
       </div>
 
       <div id="bottomNav"></div>
