--- a/faq.html
+++ b/faq.html
@@ -9,14 +9,26 @@
     </head>
     <body>
       <div id="topNav"></div>
-      <div class="lessonheader"><h1 class="lessontitle">FAQ</h1></div>
+      <div class="lessonheader"><h1 class="lessontitle">FAQs</h1></div>
       <div class="lessoncontent">
-        <p>You can access all TestDrive modules at the following link: <a href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>.</p>
+        <p class="lessonsubheader">What should I do if I run into a problem while using TestDrive?</p>
+        <p>If you have any questions about TestDrive or run into any problems while using
+          it, please e-mail us at socialmediatestdrive@gmail.com. We will do our best to
+          respond within 1-2 business days of receiving your e-mail.</p>
         <p class="lessonsubheader">What is in a TestDrive module?</p>
-        <p>A TestDrive module consists of four parts. First, students will learn key terms, ideas, and behaviors related to the topic of the module. Afterwards, students get a chance to practice the behaviors in a guided setting. Then, students get to explore a simulated social media site where they are able to interact with the timeline, create their own posts, and get further practice in social media skills. The final activity in the module will be a reflection page with questions about what students did on the simulated social media site, as well as questions for discussion.</p>
-        <p></p>
-        <p class="lessonsubheader">Questions?</p>
-        <p>Please <a href="mailto:socialmediatestdrive@gmail.com">e-mail us</a> if you have any questions or run into problems!</p>
+        <p>A TestDrive module consists of four parts. First, students will learn key
+          terms, ideas, and behaviors related to the topic of the module. Afterwards,
+          students get a chance to practice the behaviors in a guided setting. Then,
+          students get to explore a simulated social media site where they are able
+          to interact with the timeline, create their own posts, and get further
+          practice in social media skills. The final activity in the module will be
+          a reflection page with questions about whatstudents did on the simulated
+          social media site, as well as questions for discussion.</p>
+        <p class="lessonsubheader">How does TestDrive keep children's data safe?</p>
+        <p>TestDrive does not collect personal information. Students can upload pictures
+          and text into the simulated social media site, but all uploaded data is
+          permanently deleted once the user finishes a module or leaves the TestDrive 
+          website. Click here to read our privacy policy.</p>
       </div>
 
       <div id="bottomNav"></div>
