--- a/for_educators.html
+++ b/for_educators.html
@@ -11,12 +11,11 @@
       <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">For Educators</h1></div>
       <div class="lessoncontent">
-        <p class="lessonsubheader">[subheader 1]</p>
-        <p>paragraph 1</p>
-        <p>paragraph 2.</p>
-        <p class="lessonsubheader">[subheader 2]</p>
-        <p>paragraph. </p>
-
+        <p class="lessonsubheader">Social Media TestDrive for Educators</p>
+        <p>Social Media TestDrive is an educational program that offers a simulated
+          social media experience within a safe and protected platform. Each activity
+          teaches a set of key digital citizenship concepts and allows students to
+          practice and reflect upon what they have learned.</p>
       </div>
 
       <div id="bottomNav"></div>
