--- a/for_parents.html
+++ b/for_parents.html
@@ -31,13 +31,38 @@
       </div>
 
       <div class="lessoncontent">
-        <p>Social media sites are where life happens for many of today's young people, so it's important to teach them to use these sites safely and effectively. There are lots of high-quality curricula meant to teach good social media use skills. However, there aren't currently ways for kids who are too young to have social media accounts of their own to practice these skills in a safe environment.</p>
         <p class="lessonsubheader">What is Social Media TestDrive?</p>
-        <p>TestDrive is a platform created by researchers in the Cornell University Social Media Lab, in collaboration with the Program for Research in Youth Development and Engagement and New York State 4-H educators. Like a driving simulator for young people learning to drive for the first time, TestDrive is a safe social media simulation that lets young people practice the skills they learn in the classroom. It looks and feels like a real social media site, but instead of being populated by strangers from all over the world, all of the other users are “bots” pre-programmed by the site's creators. Young people can practice interacting with other “users” and their posts without worrying about "stranger danger". They can also practice setting their privacy settings, making their own posts, and other important social media skills without worrying about the consequences of getting things wrong.</p>
-        <p class="lessonsubheader">How does a TestDrive lesson work?</p>
-        <p>Each TestDrive module is designed to teach a specific social media skill: privacy settings, smart self-presentation, stopping cyberbullying, and information literacy, to name a few. Each module starts with a classroom lesson delivered by an educator or facilitator, with lesson content adapted from Common Sense Media, Harvard University's Youth and Media Program, and Fordham University's Privacy Educators Program. After each brief lesson, students participate in an interactive activity on the TestDrive platform that allows them to put the lesson into action. A group discussion and reflection activity wraps up each module.</p>
+        <p>TestDrive is a platform created by researchers in the Cornell University
+          Social Media Lab, in collaboration with Common Sense Education. TestDrive
+          is an educational program that offers a simulated social media experience
+          within a safe and protected platform. Each activity teaches a set of key
+          digital citizenship concepts and allows students to practice and reflect
+          upon what they have learned.</p>
+        <p class="lessonsubheader">Can I use TestDrive at home with my child?</p>
+        <p>Yes, we encourage parents to try out TestDrive with their children! All
+          TestDrive modules can be a self-guided activity, but you can also go through
+          modules together with your child. You can access TestDrive modules at the
+          following link: <a href="http://app.socialmediatestdrive.org">http://app.socialmediatestdrive.org</a>.
+          Please see our “Lessons” page for a short description of each TestDrive module.</p>
+        <p class="lessonsubheader">How does a TestDrive module work?</p>
+        <p>In a TestDrive module, children will first learn key terms and practice
+          social mediaskills in a guided setting. Then, children get to explore a
+          simulated social media site where they are able to interact with the
+          timeline, create their own posts, and get further practice in social
+          media skills. The final activity in the module will be a reflection
+          page with questions about what children did on the simulated social
+          media site, as well as questions for discussion.</p>
+        <p class="lessonsubheader">How can I see my child’s progress?</p>
+        <p>At the end of the reflection page, there is a feature (“Print your
+          responses”) that enables children to save or print their responses to
+          the reflection questions. You can ask your child to print out the responses
+           or save them as a PDF file on the computer. You can review the responses
+           to see how well your child is understanding the module content.</p>
         <p class="lessonsubheader">What else do I need to know?</p>
-        <p>We encourage you keep the conversation about safe social media use going! Young people's social media use experiences can differ dramatically, and we encourage you to learn along with your child. </p>
+        <p>We encourage you to keep the conversation going about responsible social
+          media use! Young people can learn a lot from talking with parents about
+          social media, so we recommend using TestDrive as a tool to generate
+          meaningful discussions about social media use.</p>
 
       </div>
 
