--- a/lessons.html
+++ b/lessons.html
@@ -20,43 +20,63 @@
               how to respond to cyberbullying situations. Students will be able to practice
               "upstanding" behaviors to cyberbullying such as supporting the target, confronting
               the bully, and reporting the cyberbullying posts to the social media site.</p>
-            <p>Aligned Common Sense Lesson: <a id="linkunderline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
             </p>
           </div>
         </div></a>
-        <a href="lessons/smartselfpres.html"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_SelfPres"></div>
+        <a href="https://app.socialmediatestdrive.org/intro/digital-literacy"><div class="lessonsBox">
+          <div class="Top_PicHalf" id="lesson_News"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Smart Self-Presentation</p>
-            <p> This lesson will help build smart self-presentation and self-disclosure skills. Students will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others.</p>
+            <p class="lessonBox_title">News on Social Media</p>
+            <p class="black">Evaluating the quality of news articles on social media is a vital skill for today’s
+              youth. This module will teach students about why fake news exists and how to identify
+              the telltale signs of fake news on social media.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
+            </p>
           </div>
         </div></a>
-        <a href="lessons/cyberbullying.html"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_"></div>
-          <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Stopping Cyberbullying</p>
-            <p> This lesson will help students learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes "upstanding" behavior in cyberbullying situations.</p>
-          </div>
-        </div></a>
-        <a href="lessons/informationliteracy.html"><div class="lessonsBox">
+        <a href="https://app.socialmediatestdrive.org/intro/safe-posting"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_Info"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Information Literacy</p>
-            <p> Evaluating the quality and veracity of facts and detecting fake news are vital skills for today's youth. This lesson will help teach students to find and critically assess facts and data they find on social media sites, and to help others do the same. </p>
+            <p class="lessonBox_title">Is it Private Information?</p>
+            <p class="black">In this module, students will learn about what kinds of information are safe to share
+              with different social media audiences and identify examples of private information that
+              is inappropriate to share on social media.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
+            </p>
+          </div>
+        </div></a>
+        <a href="https://app.socialmediatestdrive.org/intro/presentation"><div class="lessonsBox">
+          <div class="Top_PicHalf" id="lesson_Online"></div>
+          <div class="Bottom_TextHalf">
+            <p class="lessonBox_title">Online Identities</p>
+            <p class="black">This module will help students manage how they present themselves on social
+              media. Students will learn about the different audiences that might see what
+              they post online, and think about the things they share and the way they
+              present themselves to others.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
+            </p>
           </div>
         </div></a>
         <a href="#"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_PowerofLikes"></div>
+          <div class="Top_PicHalf" id="lesson_DigitalFoot"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">COMING SOON: The Power of Likes</p>
-            <p> Likes are a common way to show appreciation on social media sites. But sometimes people focus more on getting likes than on actually liking others.  This lesson will help students think critically about what likes are, what it means to "like" something, and how to distinguish between popularity and quality of social media content. </p>
+            <p class="lessonBox_title">Taking Care of Your Digital Footprint</p>
+            <p class="black">In this module, students will learn about how actions on social media create a digital footprint.
+              They will learn skills to positively shape their own digital footprintsas well as how to be
+              responsible for other people’s digital footprints.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
           </div>
         </div></a>
         <a href="#"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_SelfEsteem"></div>
+          <div class="Top_PicHalf" id="lesson_Privacy"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">COMING SOON: Self Esteem and Self Image</p>
-            <p>Social media sites, especially image-heavy ones, have received a lot of criticism for harming users' self-esteem. This lesson will encourage critical thinking about how we compare our real selves to others' carefully curated social media images of themselves. </p>
+            <p class="lessonBox_title">Social Media Privacy</p>
+            <p class="black">In this module, students will learn how social media sites collect information
+               about users as well as strategies for protecting their privacy on social media.
+               They will be able to practice managing their privacy settings page and practice
+               analyzing a Privacy Policy.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
           </div>
         </div></a>
 
