--- a/for_educators.html
+++ b/for_educators.html
@@ -16,6 +16,7 @@
           social media experience within a safe and protected platform. Each activity
           teaches a set of key digital citizenship concepts and allows students to
           practice and reflect upon what they have learned.</p>
+        <p>Educator guide coming soon!</p>
       </div>
 
       <div id="bottomNav"></div>
