--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
         <p><b>Curriculum and Content Development</b></p>
         <p>These Social Media Lab research assistants helped with curriculum development and content creation for TestDrive: Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
         <p><b>Website Development</b></p>
-        <p>These student web developers created the socialmediatestdrive.org website: Nika Ablao, Carina Crabbe, Sierra Stone, and Cindy Xu.</p>
+        <p>These student web developers created the socialmediatestdrive.org website: Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, and Hyun Seo (Lucy) Lee.</p>
         <p class="lessonsubheader">Sponsors</p>
         <p>Social Media TestDrive is supported by the generosity of the Morgan Family Foundation, Bronfenbrenner Center for Translational Research, and National Science Foundation award #1405634. </p>
       </div>
