--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,7 @@
         <p>TestDrive does not collect personal information. Students can upload pictures
           and text into the simulated social media site, but all uploaded data is
           permanently deleted once the user finishes a module or leaves the TestDrive 
-            website. Click <a href="https://app.socialmediatestdrive.org/privacy">here</a> to read our privacy policy.</p>
+            website. Click <a class="fontbig" href="https://app.socialmediatestdrive.org/privacy">here</a> to read our privacy policy.</p>
       </div>
 
       <div id="bottomNav"></div>
