--- a/for_parents.html
+++ b/for_parents.html
@@ -7,6 +7,14 @@
       <link rel="stylesheet" type="text/css" href="../style.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
       <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
+      <meta name='twitter:card' content="summary">
+      <meta name='twitter:title' content="Social Media TestDrive">
+      <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
+      <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
+      <meta property='og:url' content='https://socialmediatestdrive.org/for_parents.html'>
+      <meta property='og:title' content="Social Media TestDrive">
+      <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
+      <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
       <style>
         .links:hover {
             background-color: #6eb43f;
