--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,14 @@
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
+        <meta name='twitter:card' content="summary">
+        <meta name='twitter:title' content="Social Media TestDrive">
+        <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
+        <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
+        <meta property='og:url' content='https://socialmediatestdrive.org/faq.html'>
+        <meta property='og:title' content="Social Media TestDrive">
+        <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
+        <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
     </head>
     <body>
       <div id="topNav"></div>
