--- a/faq.html
+++ b/faq.html
@@ -37,6 +37,7 @@
           and text into the simulated social media site, but all uploaded data is
           permanently deleted once the user finishes a module or leaves the TestDrive 
             website. Click <a class="fontbig" href="https://app.socialmediatestdrive.org/privacy">here</a> to read our privacy policy.</p>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSOPFQg3o0TozaSkPqiGd9TY2F9SdLckJwwd78LZJECjiNVw/viewform?embedded=true" width="640" height="474" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
       <div id="bottomNav"></div>
