--- a/lessons.html
+++ b/lessons.html
@@ -17,40 +17,31 @@
     </head>
     <body>
       <div id="topNav"></div>
-
       <div class="lessons_container">
         <h3>Lessons</h3><hr/>
-        <a href="https://app.socialmediatestdrive.org/intro/cyberbullying"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
-          <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Upstanding to Cyberbullying</p>
-            <p class="black">This module will teach students how to detect signs of cyberbullying and
-              how to respond to cyberbullying situations. Students will be able to practice
-              "upstanding" behaviors to cyberbullying such as supporting the target, confronting
-              the bully, and reporting the cyberbullying posts to the social media site.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
-            </p>
-          </div>
-        </div></a>
-        <a href="https://app.socialmediatestdrive.org/intro/digital-literacy"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_News"></div>
-          <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">News on Social Media</p>
-            <p class="black">Evaluating the quality of news articles on social media is a vital skill for today’s
-              youth. This module will teach students about why fake news exists and how to identify
-              the telltale signs of fake news on social media.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
-            </p>
-          </div>
-        </div></a>
-        <a href="https://app.socialmediatestdrive.org/intro/safe-posting"><div class="lessonsBox">
+       <a href="https://app.socialmediatestdrive.org/intro/safe-posting"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_Info"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Is it Private Information?</p>
-            <p class="black">In this module, students will learn about what kinds of information are safe to share
-              with different social media audiences and identify examples of private information that
-              is inappropriate to share on social media.</p>
+            <p class="black">This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
             <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
+            </p>
+          </div>
+        </div></a>
+          <a href="https://app.socialmediatestdrive.org/intro/digfoot"><div class="lessonsBox">
+          <div class="Top_PicHalf" id="lesson_DigitalFoot"></div>
+          <div class="Bottom_TextHalf">
+            <p class="lessonBox_title">Shaping Your Digital Footprint</p>
+            <p class="black">This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
+          </div>
+        </div></a>
+          <a href="https://app.socialmediatestdrive.org/intro/cyberbullying"><div class="lessonsBox">
+          <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
+          <div class="Bottom_TextHalf">
+            <p class="lessonBox_title">How to Be an Upstander</p>
+            <p class="black">This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
             </p>
           </div>
         </div></a>
@@ -58,33 +49,26 @@
           <div class="Top_PicHalf" id="lesson_Online"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Online Identities</p>
-            <p class="black">This module will help students manage how they present themselves on social
-              media. Students will learn about the different audiences that might see what
-              they post online, and think about the things they share and the way they
-              present themselves to others.</p>
+            <p class="black">This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
             <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
             </p>
           </div>
         </div></a>
-        <a href="#"><div class="lessonsBox">
-          <div class="Top_PicHalf" id="lesson_DigitalFoot"></div>
-          <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Taking Care of Your Digital Footprint</p>
-            <p class="black">In this module, students will learn about how actions on social media create a digital footprint.
-              They will learn skills to positively shape their own digital footprintsas well as how to be
-              responsible for other people’s digital footprints.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
-          </div>
-        </div></a>
-        <a href="#"><div class="lessonsBox">
+        <a href="https://app.socialmediatestdrive.org/intro/privacy"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_Privacy"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Social Media Privacy</p>
-            <p class="black">In this module, students will learn how social media sites collect information
-               about users as well as strategies for protecting their privacy on social media.
-               They will be able to practice managing their privacy settings page and practice
-               analyzing a Privacy Policy.</p>
+            <p class="black">This module teaches how social media sites collect information about users and offers strategies for protecting privacy on </p>
             <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
+          </div>
+        </div></a>
+           <a href="https://app.socialmediatestdrive.org/intro/digital-literacy"><div class="lessonsBox">
+          <div class="Top_PicHalf" id="lesson_News"></div>
+          <div class="Bottom_TextHalf">
+            <p class="lessonBox_title">News in Social Media</p>
+            <p class="black">This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
+            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
+            </p>
           </div>
         </div></a>
 
