--- a/lessons.html
+++ b/lessons.html
@@ -18,7 +18,7 @@
     <body>
       <div id="topNav"></div>
       <div class="lessons_container">
-        <h3>Lessons</h3><hr/>
+      <div class="lessonheader"><h1 class="lessontitle">Modules</h1></div>
        <a href="https://app.socialmediatestdrive.org/intro/safe-posting"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_Info"></div>
           <div class="Bottom_TextHalf">
