--- a/lessons.html
+++ b/lessons.html
@@ -58,7 +58,7 @@
           <div class="Top_PicHalf" id="lesson_Privacy"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Social Media Privacy</p>
-            <p class="black">This module teaches how social media sites collect information about users and offers strategies for protecting privacy on </p>
+            <p class="black">This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
             <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
           </div>
         </div></a>
