--- a/for_parents.html
+++ b/for_parents.html
@@ -27,16 +27,7 @@
     </head>
     <body>
       <div id="topNav"></div>
-
-      <div id="forParents_s1" class="section1">
-        <div class="left_half">
-          <img class="headerPic" src="../img/filler2.png" alt="headerPic">
-        </div>
-        <div class="right_half">
-          <h1>The Parents & Guardians Guide to Social Media TestDrive</h1>
-          <h4>What is Social Media TestDrive and how can it help my kids understand social media?</h4>
-        </div>
-      </div>
+      <div class="lessonheader"><h1 class="lessontitle">For Parents</h1></div>
 
       <div class="lessoncontent">
         <p class="lessonsubheader">What is Social Media TestDrive?</p>
